<resources>
    <string name="app_name">LoftMoney</string>
    <string name="edittext_name_hint">Title</string>
    <string name="edittext_price_hint">Price</string>
    <string name="add_button_title">Add</string>
    <string name="add">Add</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="budget_accounting">Budget accounting</string>
    <string name="currency">%s ₽</string>
    <string name="welcome_login">SIGN IN</string>
    <string name="selected">Selected: %1$s</string>
    <string name="removeItem">Remove</string>
    <string name="confirmation">Do you really want to remove this items?</string>
    <string name="txtAvailableFinances">Available finances</string>
    <string name="txtExpense">Expense</string>
    <string name="txtIncome">Income</string>

</resources>