<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:textColorHint="@color/addItemActivity_editText_colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/edittext_name_hint"
        android:inputType="text"
        android:textColor="@color/addItemActivity_editText_color"
        android:textColorHint="@color/addItemActivity_editText_colorHint"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>


 <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/addItemActivity_editText_colorHint"
        app:layout_constraintTop_toBottomOf="@id/tilTitle">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/edittext_price_hint"
        android:digits="0123456789."
        android:inputType="number"
        android:textSize="24sp"
        android:textColor="@color/addItemActivity_editText_color"
        android:textColorHint="@color/addItemActivity_editText_colorHint"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"/>
</com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_arrow_disable"
        android:enabled="false"
        android:text="@string/add_button_title"
        android:textColor="@color/addItemActivity_buttonAdd_colorDisable"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>