<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/balance_swipe_refresh_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAvailableFinance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/txtAvailableFinances"
            android:textColor="@color/itemNameView"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/availableFinances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:textColor="@color/availableFinances"
            android:textSize="48sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/txtAvailableFinance"
            app:layout_constraintTop_toBottomOf="@+id/txtAvailableFinance" />

        <View
        android:id="@+id/dividerHorizontal1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="38dp"
        android:background="@color/borders"
        app:layout_constraintTop_toBottomOf="@+id/availableFinances" />



    <TextView
        android:id="@+id/txtExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtExpense"
        android:textColor="@color/itemNameView"
        android:textSize="10sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizontal1" />

    <TextView
        android:id="@+id/expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorItemPrice"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="end"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExpenses" />

    <View
        android:id="@+id/dividerVertical"
        android:layout_width="1dp"
        android:layout_height="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizontal1"
        android:background="@color/borders" />

    <View
        android:id="@+id/dividerHorisontal2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/dividerVertical"
        android:background="@color/borders" />

    <TextView
        android:id="@+id/txtIncomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtIncome"
        android:textColor="@color/itemNameView"
        android:textSize="10sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="@id/dividerVertical"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizontal1" />

    <TextView
        android:id="@+id/incomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorItemIncome"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="end"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/dividerVertical"
        app:layout_constraintTop_toBottomOf="@+id/txtIncomes" />

    <com.kpetrov.loftmoney.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="166dp"
        android:layout_height="176dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorisontal2"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>